@@ -1,3 +1,8 @@
+Wed Feb 12 00:18:52 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r2983
+
 Mon Jan 27 22:40:41 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
